# manim-svg-animations

./: .gitignore  README.md  pyproject.toml
manim_svg_animations/: __init__.py  html_parsed_vmobject.py
